# Wallpaper-Carousel

./: CMakeLists.txt  LICENSE  README.md
packaging/: wallpaper-carousel.desktop
qml/: CarouselItem.qml  Main.qml  qmldir
scripts/: install_local.sh
src/: imageloader.cpp  imageloader.h  infinitelistmodel.cpp  infinitelistmodel.h  main.cpp  screenhelper.cpp  screenhelper.h  wallpapercontroller.cpp  wallpapercontroller.h
